<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/classic_blue"
        android:text="@string/infos"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
         />

    <RelativeLayout
        android:id="@+id/layout_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:layout_marginLeft="20dp">
        <TextView
            android:id="@+id/date"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textStyle="italic"





            />



        <EditText
            android:id="@+id/date_txt"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_margin="1dp"

            android:layout_weight="2"
            android:background="@drawable/edit_zone"

            android:inputType="datetime"
            android:padding="8dp"

            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"



            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="vertical"
            android:layout_marginRight="20dp">
            <TextView
                android:id="@+id/hour_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/heure"
                android:textColor="@color/black"
                android:textStyle="italic"





                />



            <EditText
                android:id="@+id/hour"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_margin="1dp"
                android:layout_weight="2"
                android:layout_below="@+id/hour_txt"
                android:background="@drawable/edit_zone"

                android:inputType="time"

                android:padding="8dp"

                android:cursorVisible="false"
                android:focusable="false"


                />

        </LinearLayout>

    </RelativeLayout>




    <LinearLayout
        android:id="@+id/layout_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_date"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/nomdumarche"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="20dp"

            />
        <EditText
            android:id="@+id/market_txt"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:background="@drawable/edit_zone"
            android:padding="8dp"
            android:layout_margin="1dp"
            android:inputType="text"

            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_description"
        android:layout_below="@id/layout_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/description"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="20dp"

             />
        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:background="@drawable/edit_zone"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"


                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/condiments_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layout_description"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/condiments"
            android:layout_width="match_parent"
            android:layout_height="35dp"

            android:background="@color/classic_blue"
            android:gravity="center"
            android:text="@string/creer_article"
            android:textColor="@color/white"
            android:textStyle="bold"


            />


    </LinearLayout>
    <ImageButton
        android:layout_below="@+id/condiments_layout"
        android:id="@+id/add_shop"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"


        />

    <ImageView
        android:layout_below="@+id/condiments_layout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/add_icon"

        />
    <LinearLayout
        android:id="@+id/articles_layout"
        android:layout_below="@+id/add_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:layout_margin="10dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:scrollbarSize="5dp">
        <androidx.recyclerview.widget.RecyclerView

            android:id="@+id/myrecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        </ScrollView>


    </LinearLayout>


</RelativeLayout>
